subnets.tf
resource "aws_subnet" "public_1" {
  # The VPC ID
  vpc_id = aws_vpc.main.id

  # The CIDR block for the subnet
  cidr_block = "192.168.0.0/18"

  # The AZ for the subent
  availability_zone = "us-east-1a"

  # Required for EKS. Instances launched into the subnet should be assigned
  map_public_ip_on_launch = true

  # A map of tags to assign to the resource
  tags = {
    Name                         = "public-us-east-1a"
    "kubernetes.io/cliuster/eks" = "shared"
    "kubernetes.io/role/elb"     = 1
  }
}

resource "aws_subnet" "public_2" {
  # The VPC ID
  vpc_id = aws_vpc.main.id

  # The CIDR block for the subnet
  cidr_block = "192.168.64.0/18"

  # The AZ for the subent
  availability_zone = "us-east-1b"

  # Required for EKS. Instances launched into the subnet should be assigned
  map_public_ip_on_launch = true

  # A map of tags to assign to the resource
  tags = {
    Name                         = "public-us-east-1b"
    "kubernetes.io/cliuster/eks" = "shared"
    "kubernetes.io/role/elb"     = 1
  }
}

resource "aws_subnet" "private_1" {
  # The VPC ID
  vpc_id = aws_vpc.main.id

  # The CIDR block for the subnet
  cidr_block = "192.168.128.0/18"

  # The AZ for the subent
  availability_zone = "us-east-1a"

  # A map of tags to assign to the resource
  tags = {
    Name                              = "private-us-east-1a"
    "kubernetes.io/cliuster/eks"      = "shared"
    "kubernetes.io/role/internal-elb" = 1
  }
}

resource "aws_subnet" "private_2" {
  # The VPC ID
  vpc_id = aws_vpc.main.id

  # The CIDR block for the subnet
  cidr_block = "192.168.192.0/18"

  # The AZ for the subent
  availability_zone = "us-east-1b"

  # A map of tags to assign to the resource
  tags = {
    Name                              = "private-us-east-1b"
    "kubernetes.io/cliuster/eks"      = "shared"
    "kubernetes.io/role/internal-elb" = 1
  }
}
